--- a/fronend/index.html
+++ b/fronend/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="google-site-verification" content="ixVBBv3PDB5-bXuudBem2reJMGeS7xZMvw6koC1c-Ac" />
     <title>Transaction App</title>
   </head>
   <body>
